고객센터 -- 작업 중

--- a/src/html/benefit/SCR_GA_BN_0104_M01.html
+++ b/src/html/benefit/SCR_GA_BN_0104_M01.html
@@ -111,11 +111,9 @@
                                     </div>
                                 </li>
                             </ul>
-                            <div class="btn-area">
-                                <button class="btn line full lg">
-                                    <span class="text">더보기</span>
-                                    <i class="ico more lg"></i>
-                                </button>
+                            <hr class="divider">
+                            <div class="btn-group mt24">
+                                <button type="button" class="btn line lg btn-more"><span class="text">더보기</span><i class="ico more lg"></i></button>
                             </div>
                         </div>
                        </div>
