--- a/src/html/customer/SCR_GA_CS_0101_M01.html
+++ b/src/html/customer/SCR_GA_CS_0101_M01.html
@@ -42,7 +42,7 @@
                                 <h3 class="title-md">이용&상품안내</h3>
                             </div>
                             <div class="section-body">
-                                <div class="qna-list">
+                                <div class="qna-list type-1">
                                     <ul>
                                         <li>
                                             <a href="#">
@@ -90,7 +90,7 @@
                                 </button>
                             </div>
                             <div class="section-body">
-                                <div class="qna-list">
+                                <div class="qna-list-type-1">
                                     <ul>
                                         <li>
                                             <a href="#">
