--- a/src/html/customer/SCR_GA_CS_0301_M01_01.html
+++ b/src/html/customer/SCR_GA_CS_0301_M01_01.html
@@ -13,36 +13,39 @@
             <section id="container">
                 <div class="contents">
                     <div class="customer">
-                        <div class="frequently-qna">
-                            <h3 class="intro-text">
-                                무엇을 도와드릴까요?<br />
-                                도움을 드리겠습니다.
-                            </h3>
-                            <div class="search-wrap">
-                                <div class="ip-group">
-                                    <div class="row">
-                                        <i class="ico search lg"></i>
-                                        <input id="ip01" type="text" class="ip-txt" placeholder="검색어 입력" />
-                                        <div class="line"></div>
-                                    </div>
-                                    <p class="error-txt">비밀번호가 일치하지 않습니다</p>
+                        <h3 class="intro-text">
+                            무엇을 도와드릴까요?<br />
+                            도움을 드리겠습니다.
+                        </h3>
+                        <div class="search-wrap">
+                            <div class="ip-group">
+                                <div class="row">
+                                    <i class="ico search lg"></i>
+                                    <input id="ip01" type="text" class="ip-txt" placeholder="검색어 입력" value="반납" />
+                                    <div class="line"></div>
                                 </div>
+                                <p class="error-txt">비밀번호가 일치하지 않습니다</p>
                             </div>
-                            <div class="btn-tab">
-                                <div class="scroll-area">
-                                    <button type="button" class="btn line xs active">반납</button>
-                                    <button type="button" class="btn line xs">사고</button>
-                                    <button type="button" class="btn line xs">전기차</button>
-                                    <button type="button" class="btn line xs">주유</button>
-                                    <button type="button" class="btn line xs">쿠폰</button>
-                                    <button type="button" class="btn line xs">면허</button>
-                                </div>
+                        </div>
+                        <div class="btn-tab">
+                            <div class="scroll-area">
+                                <button type="button" class="btn line xs active">반납</button>
+                                <button type="button" class="btn line xs">사고</button>
+                                <button type="button" class="btn line xs">전기차</button>
+                                <button type="button" class="btn line xs">주유</button>
+                                <button type="button" class="btn line xs">쿠폰</button>
+                                <button type="button" class="btn line xs">면허</button>
                             </div>
-                            <div class="qna-list type-2">
+                        </div>
+                        <div class="qna-list type-3 narrow mt16">
+                            <div class="qna-list-head">
+                                <p><span class="text-green">‘반납’</span> 관련 <span class="text-green">97</span>건의 FAQ가 검색되었습니다.</p>
+                            </div>
+                            <div class="qna-list-body">
                                 <ul>
                                     <li>
                                         <a href="#">
-                                            <span class="text">가입/탈퇴</span>
+                                            <span class="text">예약한 장소가 아닌 다른 그린존에 <span class="text-green">반납</span>이 가능한가요? </span>
                                             <button class="btn icon lg">
                                                 <i class="ico arrow-right-nav060 lg"></i>
                                             </button>
@@ -50,7 +53,7 @@
                                     </li>
                                     <li>
                                         <a href="#">
-                                            <span class="text">예약/취소</span>
+                                            <span class="text">차량 <span class="text-green">반납</span> 시 주유를 꼭 해야하나요?</span>
                                             <button class="btn icon lg">
                                                 <i class="ico arrow-right-nav060 lg"></i>
                                             </button>
@@ -58,7 +61,7 @@
                                     </li>
                                     <li>
                                         <a href="#">
-                                            <span class="text">쿠폰/폰인트</span>
+                                            <span class="text">차량 <span class="text-green">반납</span> 방법을 알려주세요?</span>
                                             <button class="btn icon lg">
                                                 <i class="ico arrow-right-nav060 lg"></i>
                                             </button>
@@ -66,7 +69,7 @@
                                     </li>
                                     <li>
                                         <a href="#">
-                                            <span class="text">요금/결제</span>
+                                            <span class="text">전기차 <span class="text-green">반납</span>이 늦어질 것 같아요</span>
                                             <button class="btn icon lg">
                                                 <i class="ico arrow-right-nav060 lg"></i>
                                             </button>
@@ -74,7 +77,7 @@
                                     </li>
                                     <li>
                                         <a href="#">
-                                            <span class="text">사용/반납</span>
+                                            <span class="text">차량 <span class="text-green">반납</span>이 실패되었습니다</span>
                                             <button class="btn icon lg">
                                                 <i class="ico arrow-right-nav060 lg"></i>
                                             </button>
@@ -82,7 +85,7 @@
                                     </li>
                                     <li>
                                         <a href="#">
-                                            <span class="text">보험/사고</span>
+                                            <span class="text">전기차 <span class="text-green">반납</span> 방법을 알려주세요</span>
                                             <button class="btn icon lg">
                                                 <i class="ico arrow-right-nav060 lg"></i>
                                             </button>
@@ -90,23 +93,7 @@
                                     </li>
                                     <li>
                                         <a href="#">
-                                            <span class="text">전기차</span>
-                                            <button class="btn icon lg">
-                                                <i class="ico arrow-right-nav060 lg"></i>
-                                            </button>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <span class="text">법인</span>
-                                            <button class="btn icon lg">
-                                                <i class="ico arrow-right-nav060 lg"></i>
-                                            </button>
-                                        </a>
-                                    </li>
-                                    <li>
-                                        <a href="#">
-                                            <span class="text">기타</span>
+                                            <span class="text">전기차 <span class="text-green">반납</span>시 꼭 충전을 해야하나요?</span>
                                             <button class="btn icon lg">
                                                 <i class="ico arrow-right-nav060 lg"></i>
                                             </button>
@@ -115,6 +102,10 @@
                                 </ul>
                             </div>
                         </div>
+                        <div class="btn-group mt16">
+                            <button type="button" class="btn line lg btn-more"><span class="text">검색결과 더보기</span><i class="ico more lg"></i></button>
+                        </div>
+                        <p class="mt40">원하시는 답변을 찾지 못하셨나요? 채팅 또는 전화상담을 통해 원하시는 답변을 찾아보세요.</p>
                     </div>
                 </div>
             </section>
