--- a/src/html/customer/SCR_GA_CS_0302_M01.html
+++ b/src/html/customer/SCR_GA_CS_0302_M01.html
@@ -12,64 +12,75 @@
             <!-- container -->
             <section id="container">
                 <div class="contents">
-                    <div class="qna-list-wrap">
+                    <div class="qna-list type-3 mt24">
                         <ul>
                             <li>
-                                <span class="text"> 휴대폰 기기인증이 실패됩니다 </span>
-                                <button class="btn icon md">
-                                    <i class="ico arrow-right-nav060 lg"></i>
-                                </button>
+                                <a href="#">
+                                    <span class="text"> 휴대폰 기기인증이 실패됩니다 </span>
+                                    <button class="btn icon md">
+                                        <i class="ico arrow-right-nav060 lg"></i></button
+                                ></a>
                             </li>
                             <li>
-                                <span class="text"> 면허등록 방법과 기준을 알려주세요 </span>
-                                <button class="btn icon md">
-                                    <i class="ico arrow-right-nav060 lg"></i>
-                                </button>
+                                <a href="#">
+                                    <span class="text"> 면허등록 방법과 기준을 알려주세요 </span>
+                                    <button class="btn icon md">
+                                        <i class="ico arrow-right-nav060 lg"></i></button
+                                ></a>
                             </li>
                             <li>
-                                <span class="text"> 회원 가입 시, 이미 가입된 정보입니다라는 문구가 뜹니다 </span>
-                                <button class="btn icon md">
-                                    <i class="ico arrow-right-nav060 lg"></i>
-                                </button>
+                                <a href="#">
+                                    <span class="text"> 회원 가입 시, 이미 가입된 정보입니다라는 문구가 뜹니다 </span>
+                                    <button class="btn icon md">
+                                        <i class="ico arrow-right-nav060 lg"></i></button
+                                ></a>
                             </li>
                             <li>
-                                <span class="text"> 휴대폰 번호를 변경하면 기기/본인인증을 다시 받아야 하나요 </span>
-                                <button class="btn icon md">
-                                    <i class="ico arrow-right-nav060 lg"></i>
-                                </button>
+                                <a href="#">
+                                    <span class="text"> 휴대폰 번호를 변경하면 기기/본인인증을 다시 받아야 하나요 </span>
+                                    <button class="btn icon md">
+                                        <i class="ico arrow-right-nav060 lg"></i></button
+                                ></a>
                             </li>
                             <li>
-                                <span class="text"> 휴대폰 기기/본인 인증이 안돼요(본인 명의 휴대폰 없음, 인증 횟수 초과)
-                                    </span>
-                                <button class="btn icon md">
-                                    <i class="ico arrow-right-nav060 lg"></i>
-                                </button>
+                                <a href="#">
+                                    <span class="text"> 휴대폰 기기/본인 인증이 안돼요(본인 명의 휴대폰 없음, 인증 횟수 초과) </span>
+                                    <button class="btn icon md">
+                                        <i class="ico arrow-right-nav060 lg"></i></button
+                                ></a>
                             </li>
                             <li>
-                                <span class="text">휴면 계정 해제 방법에 대해 알려주세요</span>
-                                <button class="btn icon md">
-                                    <i class="ico arrow-right-nav060 lg"></i>
-                                </button>
+                                <a href="#">
+                                    <span class="text">휴면 계정 해제 방법에 대해 알려주세요</span>
+                                    <button class="btn icon md">
+                                        <i class="ico arrow-right-nav060 lg"></i></button
+                                ></a>
                             </li>
                             <li>
-                                <span class="text">그린카 회원 카드 분실 시 어떻게 하나요</span>
-                                <button class="btn icon md">
-                                    <i class="ico arrow-right-nav060 lg"></i>
-                                </button>
+                                <a href="#">
+                                    <span class="text">그린카 회원 카드 분실 시 어떻게 하나요</span>
+                                    <button class="btn icon md">
+                                        <i class="ico arrow-right-nav060 lg"></i></button
+                                ></a>
                             </li>
                             <li>
-                                <span class="text">어플리케이션 설치 방법을 알려주세요</span>
-                                <button class="btn icon md">
-                                    <i class="ico arrow-right-nav060 lg"></i>
-                                </button>
+                                <a href="#">
+                                    <span class="text">어플리케이션 설치 방법을 알려주세요</span>
+                                    <button class="btn icon md">
+                                        <i class="ico arrow-right-nav060 lg"></i></button
+                                ></a>
                             </li>
                             <li>
-                                <span class="text">SNS 연동 로그인 방법을 알려주세요</span>
-                                <button class="btn icon md">
-                                    <i class="ico arrow-right-nav060 lg"></i>
-                                </button>
+                                <a href="#">
+                                    <span class="text">SNS 연동 로그인 방법을 알려주세요</span>
+                                    <button class="btn icon md">
+                                        <i class="ico arrow-right-nav060 lg"></i></button
+                                ></a>
                             </li>
                         </ul>
+                        <div class="btn-group mt8">
+                            <button type="button" class="btn line lg btn-more"><span class="text">검색결과 더보기</span><i class="ico more lg"></i></button>
+                        </div>
                     </div>
                 </div>
             </section>
