--- a/src/html/customer/SCR_GA_CS_0303_M01.html
+++ b/src/html/customer/SCR_GA_CS_0303_M01.html
@@ -6,14 +6,14 @@
     <body>
         <div id="wrap">
             <!-- header -->
-            @@include('@@webRoot/include/header.html', { type: "sub_02", title: "가입/탈퇴" })
+            @@include('@@webRoot/include/header.html', { type: "sub_02", title: " " })
             <!-- //header -->
 
             <!-- container -->
             <section id="container">
                 <div class="contents">
                     <div class="customer">
-                        <section>
+                        <section class="qna-detail">
                             <h4>휴대폰 기기/본인 인증이 안돼요<br />(본인 명의 휴대폰 없음, 인증 횟수 초과)</h4>
                             <p>본인 명의 휴대폰 미소지로 휴대폰 기인/본인 인증이 불가능한 경우 그린카 서비스 이용이 불가능합니다.</p>
                             <p>또한, 부정 사용 방지를 위해 월 본인인증 요청 횟수는 3회로 제한되어 있음을 알려드립니다.</p>
