--- a/src/html/customer/SCR_GA_CS_0401_M01_01.html
+++ b/src/html/customer/SCR_GA_CS_0401_M01_01.html
@@ -27,7 +27,7 @@
                                 <textarea name="" id="" cols="30" rows="10" placeholder="예시"></textarea>
                             </div>
                             <div class="ip-group">
-                                <div class="row flex">
+                                <div class="row grid-flex">
                                     <div class="gc-select">
                                         <select name="" id="">
                                             <option>지역선택</option>
