--- a/src/status.html
+++ b/src/status.html
@@ -1738,6 +1738,34 @@
                         <tr>
                             <td></td>
                             <td></td>
+                            <td>(검색결과 있음)</td>
+                            <td></td>
+                            <td></td>
+                            <td>박지수</td>
+                            <td>/customer</td>
+                            <td><a target="_blank" href="html/customer/SCR_GA_CS_0301_M01_01.html">SCR_GA_CS_0301_M01_01.html</a></td>
+                            <td class="stat">⚪</td>
+                            <td class="compl"></td>
+                            <td class="date"></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td>(검색결과 없음)</td>
+                            <td></td>
+                            <td></td>
+                            <td>박지수</td>
+                            <td>/customer</td>
+                            <td><a target="_blank" href="html/customer/SCR_GA_CS_0301_M01_02.html">SCR_GA_CS_0301_M01_02.html</a></td>
+                            <td class="stat">⚪</td>
+                            <td class="compl"></td>
+                            <td class="date"></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
                             <td>자주 묻는 질문 카테고리</td>
                             <td></td>
                             <td></td>
