--- a/src/html/customer/SCR_GA_CS_0501_M01.html
+++ b/src/html/customer/SCR_GA_CS_0501_M01.html
@@ -117,7 +117,7 @@
                         </section>
                         <hr class="divider" />
                         <section>
-                            <h4>그린카 법인/단체 카셰어링 지금 신청해 보세요!</h4>
+                            <h4>그린카 법인/단체 카셰어링<br> 지금 신청해 보세요!</h4>
                             <p>법인/단체 고객만의 특별한 혜택 이용내역 확인, 소속원 관리까지 간편하게 이용가능</p>
                         </section>
                         <div class="btn-group">
