--- a/src/status.html
+++ b/src/status.html
@@ -1741,10 +1741,10 @@
                             <td>자주 묻는 질문 카테고리</td>
                             <td></td>
                             <td></td>
-                            <td>박지수</td>
+                            <td></td>
                             <td>/customer</td>
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0302_M01.html">SCR_GA_CS_0302_M01.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -1755,10 +1755,10 @@
                             <td>자주 묻는 질문 상세</td>
                             <td></td>
                             <td></td>
-                            <td>박지수</td>
+                            <td></td>
                             <td>/customer</td>
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0303_M01.html">SCR_GA_CS_0303_M01.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -1811,10 +1811,10 @@
                             <td>가입</td>
                             <td></td>
                             <td></td>
-                            <td>박지수</td>
+                            <td></td>
                             <td>/customer</td>
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0502_M01.html">SCR_GA_CS_0502_M01.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -1825,10 +1825,10 @@
                             <td></td>
                             <td></td>
                             <td></td>
-                            <td>박지수</td>
+                            <td></td>
                             <td>/customer</td>
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0601_M01.html">SCR_GA_CS_0601_M01.html</a></td>
-                            <td class="stat">⚪</td>
+                            <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
