--- a/src/html/benefit/SCR_GA_BN_0302_M01.html
+++ b/src/html/benefit/SCR_GA_BN_0302_M01.html
@@ -39,7 +39,7 @@
 									</div>
 									
 									<!-- 20220823 -->
-									<div class="ip-group">
+									<div class="ip-group certi">
 										<div class="row">
 											<input type="number" class="ip-txt">
 											<div class="line"></div>
