고객센터 -- 작업 중

--- a/src/html/customer/SCR_GA_CS_0101_M01.html
+++ b/src/html/customer/SCR_GA_CS_0101_M01.html
@@ -84,13 +84,13 @@
                         <section class="section">
                             <div class="section-title">
                                 <h3 class="title-md">자주하는 질문</h3>
-                                <button class="btn icon right">
+                                <button class="btn icon right btn-more-view">
                                     <span class="text">더보기</span>
                                     <i class="ico arrow-right-nav030 md"></i>
                                 </button>
                             </div>
                             <div class="section-body">
-                                <div class="qna-list-type-1">
+                                <div class="qna-list type-1">
                                     <ul>
                                         <li>
                                             <a href="#">
