--- a/src/html/customer/SCR_GA_CS_0601_M01_01.html
+++ b/src/html/customer/SCR_GA_CS_0601_M01_01.html
@@ -30,11 +30,11 @@
                             </div>
                             <div class="agree-group grid-flex mt16">
                                 <label for="tmpRadio01" class="gc-radio flex">
-                                    <input type="radio" name="tmpRadio01" id="tmpRadio01" checked="" />
+                                    <input type="radio" name="tmpRadio01" id="tmpRadio01" checked="">
                                     <span>동의</span>
                                 </label>
                                 <label for="tmpRadio02" class="gc-radio flex">
-                                    <input type="radio" name="tmpRadio01" id="tmpRadio02" />
+                                    <input type="radio" name="tmpRadio01" id="tmpRadio02">
                                     <span>미동의</span>
                                 </label>
                             </div>
@@ -42,26 +42,17 @@
                         <hr class="divider" />
                         <section>
                             <h4>접수유형</h4>
-                            <div class="gc-select full">
-                                <select name="" id="">
-                                    <option>접수유형을 선택해 주세요</option>
-                                    <option>면허증 등 신분증</option>
-                                </select>
-                            </div>
                         </section>
                         <hr class="divider" />
                         <section>
                             <h4>접수내용</h4>
-                            <div class="ip-textarea">
-                                <textarea name="" id="" cols="30" rows="10" placeholder=" "></textarea>
-                            </div>
-                            <!-- <ul class="list">
+                            <ul class="list">
                                 <li>작성 시, 1000자 이내로 작성해주세요.</li>
                                 <li>개인정보 수집·이용 동의에 체크한 뒤 관련서류를 등록해주세요.</li>
                                 <li>제공된 정보는 이용자식별, 회원정보변경 등의 요청 목적으로만 사용되며, 개인정보보보호기간에 준한 보관/폐기가 진행됩니다.</li>
                                 <li>제공된 정보는 이용자식별, 회원정보변경 등의 요청 목적으로만 사용되며, 개인정보보보호기간에 준한 보관/폐기가 진행됩니다.</li>
                                 <li>운전면허번호는 면허 유효성 확인을 위해 전체번호가 필요합니다.</li>
-                            </ul> -->
+                            </ul>
                         </section>
                         <hr class="divider" />
                         <section>
@@ -72,11 +63,20 @@
                                 </div>
                                 <p>10MB 미만의 이미지 파일만 업로드 가능합니다. (jpg, jpeg, png, bmp)</p>
                             </div>
-                            <div class="btn-group mt24">
+                            <div class="btn-group">
                                 <button type="button" class="btn green lg">접수하기</button>
                             </div>
-                            <p>※ 보유 및 이용기간 : 업무 목적 달성 후 즉시 폐기 (수집항목 공통)</p>
                         </section>
+                        <div class="toast-pop active">
+                            <div class="toast-container">
+                                <div class="module">
+                                    <p class="message">
+                                        개인정보 수집 이용에 대한 <br />
+                                        동의 후 작성 가능합니다.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </section>
