--- a/src/html/customer/SCR_GA_CS_0701_M01.html
+++ b/src/html/customer/SCR_GA_CS_0701_M01.html
@@ -6,27 +6,32 @@
     <body>
         <div id="wrap">
             <!-- header -->
-            @@include('@@webRoot/include/header.html', { type: "sub_02", title: "온라인서류제출" })
+            @@include('@@webRoot/include/header.html', { type: "sub_02", title: "모바일 문의" })
             <!-- //header -->
 
             <!-- container -->
             <section id="container">
                 <div class="contents">
                     <div class="customer">
+                        <div class="gc-tab">
+                            <ul>
+                                <li><a href="#" class="active">문의하기</a></li>
+                                <li><a href="#">문의내역</a></li>
+                            </ul>
+                            <span class="tab-indicator"></span>
+                        </div>
                         <section>
                             <h3 class="intro-text">
-                                <span>추가정보를</span><br />
-                                안전하게 업데이트 해드리겠습니다.
+                                <span>빠른 도움을 드리기 위해</span><br />
+                                어떤 상황인지 알려주세요
                             </h3>
                             <div class="guide-box align-left mt16">
-                                <p>온라인서류제출 신청안내 확인 후, 기재 등록해주세요</p>
-                                <p>서류제출 사유를 자세히 입력해주시면, 보다 빠른 업무처리가 가능합니다.</p>
+                                <p>모바일 문의 상담시간은 09:00~18:00 입니다.</p>
+                                <p>문의 유형에 따라 [작성유의사항]이 있으니, 확인 후 정확한 정보를 입력해주시면 보다 빠른 답변이 가능합니다.</p>
                             </div>
                             <h4>개인정보 수집 이용 및 제공 동의 (필수)</h4>
                             <div class="terms">
-                                <a href="#" class="item">
-                                    <span class="text">[개인정보 수집수집 · 이용에 대한 동의]</span><i class="ico next-sm md"></i>
-                                </a>
+                                <a href="#" class="item"> <span class="text">[개인정보 수집수집 · 이용에 대한 동의]</span><i class="ico next-sm md"></i> </a>
                             </div>
                             <div class="agree-group grid-flex mt16">
                                 <label for="tmpRadio01" class="gc-radio flex">
@@ -41,26 +46,23 @@
                         </section>
                         <hr class="divider" />
                         <section>
-                            <h4>접수유형</h4>
+                            <h4>문의유형</h4>
                             <div class="gc-select full">
                                 <select name="" id="">
-                                    <option>접수유형을 선택해 주세요</option>
+                                    <option>문의유형을 선택해 주세요</option>
                                     <option>면허증 등 신분증</option>
                                 </select>
                             </div>
                         </section>
                         <hr class="divider" />
                         <section>
-                            <h4>접수내용</h4>
+                            <h4>문의내용</h4>
                             <div class="ip-textarea">
-                                <textarea name="" id="" cols="30" rows="10" placeholder=" "></textarea>
+                                <textarea name="" id="" cols="30" rows="4" placeholder=" "></textarea>
                             </div>
                             <!-- <ul class="list">
                                 <li>작성 시, 1000자 이내로 작성해주세요.</li>
-                                <li>개인정보 수집·이용 동의에 체크한 뒤 관련서류를 등록해주세요.</li>
-                                <li>제공된 정보는 이용자식별, 회원정보변경 등의 요청 목적으로만 사용되며, 개인정보보보호기간에 준한 보관/폐기가 진행됩니다.</li>
-                                <li>제공된 정보는 이용자식별, 회원정보변경 등의 요청 목적으로만 사용되며, 개인정보보보호기간에 준한 보관/폐기가 진행됩니다.</li>
-                                <li>운전면허번호는 면허 유효성 확인을 위해 전체번호가 필요합니다.</li>
+                                <li>문의 내용에 대한 정확한 정보를 입력해주시면 보다 빠른 답변이 가능합니다.</li>
                             </ul> -->
                         </section>
                         <hr class="divider" />
@@ -75,7 +77,6 @@
                             <div class="btn-group mt24">
                                 <button type="button" class="btn green lg">접수하기</button>
                             </div>
-                            <p>※ 보유 및 이용기간 : 업무 목적 달성 후 즉시 폐기 (수집항목 공통)</p>
                         </section>
                     </div>
                 </div>
