내정보 추가 작업

--- a/src/html/benefit/SCR_GA_BN_0302_M01.html
+++ b/src/html/benefit/SCR_GA_BN_0302_M01.html
@@ -55,6 +55,9 @@
 									<!-- //20220823 -->
 								</div>
 							</div>
+							<p class="test">
+								tests
+							</p>
 
                             <ul class="list">
                                 <li>이메일 인증 후 임직원 쿠폰몰에 접속하실 수 있습니다.</li>
