--- a/src/html/mypage/SCR_GA_CI_1201_P01.html
+++ b/src/html/mypage/SCR_GA_CI_1201_P01.html
@@ -1,20 +1,18 @@
 <div class="layer-wrap">
     <div class="layer-header">
-        <h5 class="title">메모</h5>
+        <h5 class="title">카드 별칭 변경</h5>
         <!-- <button type="button" class="layer-close" >닫기</button> -->
     </div>
     <div class="layer-body">
 
 		<div class="history-notes">
-			<p class="desc">참고하실 내용을 메모하세요.</p>
+			<p class="desc">국민카드 5272</p>
 			<div class="ip-wrap">
 				<div class="ip-group box">
 					<div class="row">
-						<input type="text" class="ip-txt" placeholder="메모입력">
+						<input type="text" class="ip-txt" placeholder="6자 이내">
 						<button type="button" class="icon-group btn-del">
-							<!-- 20220826 -->
 							<i class="ico delete lg"></i>
-							<!-- //20220826 -->
 						</button>
 						<div class="line"></div>
 					</div>
@@ -27,7 +25,7 @@
         <div class="btn-wrap">
             <div class="btn-group">
                 <button type="button" class="btn cancel md">닫기</button>
-                <button type="button" class="btn md">저장하기</button>
+                <button type="button" class="btn md">변경하기</button>
             </div>
         </div>
     </div>
