--- a/src/status.html
+++ b/src/status.html
@@ -825,7 +825,7 @@
                             <td><a target="_blank" href="components/popup_module.html#history#SCR_GA_HS_0201_P02">SCR_GA_HS_0201_P02.html</a></td>
                             <td class="stat">⚪</td>
                             <td class="compl"></td>
-                            <td class="date"></td>
+                            <td class="date">20220826</td>
                             <td></td>
                         </tr>
                     </tbody>
@@ -1505,9 +1505,9 @@
                             <td>카드 관리</td>
                             <td></td>
                             <td></td>
-                            <td></td>
+                            <td>이민우</td>
                             <td>/mypage</td>
-                            <td><a target="_blank" href="html/.html">.html</a></td>
+							<td><a target="_blank" href="components/popup_module.html#mypage#SCR_GA_CI_1201_P01">SCR_GA_CI_1201_P01.html</a></td>
                             <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
@@ -1519,9 +1519,9 @@
                             <td>카드 등록</td>
                             <td></td>
                             <td></td>
-                            <td></td>
+                            <td>이민우</td>
                             <td>/mypage</td>
-                            <td><a target="_blank" href="html/.html">.html</a></td>
+                            <td><a target="_blank" href="html/mypage/SCR_GA_CI_1202_M01.html">SCR_GA_CI_1202_M01.html</a></td>
                             <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
@@ -1533,9 +1533,9 @@
                             <td>KT멤버십</td>
                             <td></td>
                             <td></td>
-                            <td></td>
+                            <td>이민우</td>
                             <td>/mypage</td>
-                            <td><a target="_blank" href="html/.html">.html</a></td>
+                            <td><a target="_blank" href="html/mypage/SCR_GA_CI_1301_T01.html">SCR_GA_CI_1301_T01.html</a></td>
                             <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
@@ -1547,9 +1547,9 @@
                             <td>개인정보 수입/이용 동의</td>
                             <td></td>
                             <td></td>
-                            <td></td>
+                            <td>이민우</td>
                             <td>/mypage</td>
-                            <td><a target="_blank" href="html/.html">.html</a></td>
+							<td><a target="_blank" href="components/popup_module.html#mypage#SCR_GA_CI_1301_P01#full">SCR_GA_CI_1301_P01.html</a></td>
                             <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
@@ -1561,9 +1561,9 @@
                             <td>T멤버십</td>
                             <td></td>
                             <td></td>
-                            <td></td>
+                            <td>이민우</td>
                             <td>/mypage</td>
-                            <td><a target="_blank" href="html/.html">.html</a></td>
+                            <td><a target="_blank" href="html/mypage/SCR_GA_CI_1302_T02.html">SCR_GA_CI_1302_T02.html</a></td>
                             <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
@@ -1575,9 +1575,9 @@
                             <td>개인정보 수입/이용 동의</td>
                             <td></td>
                             <td></td>
-                            <td></td>
+                            <td>이민우</td>
                             <td>/mypage</td>
-                            <td><a target="_blank" href="html/.html">.html</a></td>
+                            <td><a target="_blank" href="components/popup_module.html#mypage#SCR_GA_CI_1302_P01#full">SCR_GA_CI_1302_P01.html</a></td>
                             <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
@@ -1589,9 +1589,9 @@
                             <td>목록</td>
                             <td></td>
                             <td></td>
-                            <td></td>
+                            <td>이민우 </td>
                             <td>/mypage</td>
-                            <td><a target="_blank" href="html/.html">.html</a></td>
+                            <td><a target="_blank" href="html/mypage/SCR_GA_CI_1401_M01.html">SCR_GA_CI_1401_M01.html</a></td>
                             <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
@@ -1603,9 +1603,9 @@
                             <td>상세</td>
                             <td></td>
                             <td></td>
-                            <td></td>
+                            <td>이민우</td>
                             <td>/mypage</td>
-                            <td><a target="_blank" href="html/.html">.html</a></td>
+                            <td><a target="_blank" href="html/mypage/SCR_GA_CI_1402_M01.html">SCR_GA_CI_1402_M01.html</a></td>
                             <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
@@ -1614,12 +1614,26 @@
                         <tr>
                             <td></td>
                             <td>약관 및 정책</td>
+                            <td>리스트</td>
                             <td></td>
                             <td></td>
-                            <td></td>
-                            <td></td>
+                            <td>이민우</td>
                             <td>/mypage</td>
-                            <td><a target="_blank" href="html/.html">.html</a></td>
+                            <td><a target="_blank" href="html/mypage/SCR_GA_CS_0101_M01.html">SCR_GA_CS_0101_M01.html</a></td>
+                            <td class="stat"></td>
+                            <td class="compl"></td>
+                            <td class="date"></td>
+                            <td></td>
+                        </tr>
+						<tr>
+                            <td></td>
+                            <td></td>
+                            <td>상세</td>
+                            <td></td>
+                            <td></td>
+                            <td>이민우</td>
+                            <td>/mypage</td>
+							<td><a target="_blank" href="components/popup_module.html#mypage#SCR_GA_CS_0101_M01_P01#full">SCR_GA_CS_0101_M01_P01.html</a></td>
                             <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
